--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </article>
 </div>
 <footer>
-    <p>Designed by The Greatest Developer</p>
+    <p>Designed by ME</p>
 </footer>
 </body>
 </html>
